# gemma

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  start
article_theory_workspace/: .gitignore  README.md  run.sh  run_academic.sh  run_claim_briefs.sh
article_theory_workspace/academic_outputs/: index.json  index.md
article_theory_workspace/academic_outputs/_theory/: 01_theory_map.json  02_theory_rubric.json  README.md
article_theory_workspace/academic_outputs/maher-aquanno-2026-monopoly-or-competition-unraveling-the-amazon-paradox/: 01_article_map.json  02_relevance_audit.json  03_counter_audit.json  04_final_judgment.json  05_theory_implications.json  report.md
article_theory_workspace/academic_outputs/s00146-026-02990-2/: 01_article_map.json  02_relevance_audit.json  03_counter_audit.json  report.md  (+2 more)
article_theory_workspace/claim_briefs/: C1.json  C2.json  C3.json  C4.json  C5.json  C6.json  index.json
article_theory_workspace/others/: wsj-at-david-sackss-behest-white-house-barrels-forward-on-industry-friendly-ai-policy.txt
article_theory_workspace/outputs/: index.json  index.md
docs/: CHANGELOG.md  FEATURES.md
src/gemma/: __init__.py  article_theory_analysis.py  claim_revision_briefs.py
tests/: test_article_theory_analysis.py  test_claim_revision_briefs.py  test_ingest.py  test_routes.py
webapp/: app.py  db.py  ingest.py  logging_config.py  schema.py
webapp/static/: style.css
webapp/templates/: base.html  claim_briefs.html  claim_detail.html  claims.html  corpus.html  document.html  home.html  implications.html  review.html  theory.html
(+127 files in other folders)
